[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/Components/ResponsiveSlider.gd" type="Script" id=1]
[ext_resource path="res://UI/Components/FixedWidthButton.gd" type="Script" id=2]
[ext_resource path="res://UI/Toolbar.gd" type="Script" id=3]
[ext_resource path="res://UI/Components/IconButton.gd" type="Script" id=13]
[ext_resource path="res://UI/Themes/theme_dark.tres" type="Theme" id=15]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.207843, 0.211765, 0.227451, 1 )

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="Toolbar" type="PanelContainer"]
anchor_right = 1.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
theme = ExtResource( 15 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="."]
margin_right = 1920.0
margin_bottom = 48.0

[node name="Left" type="HBoxContainer" parent="HBox"]
margin_right = 958.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="File" type="HBoxContainer" parent="HBox/Left"]
margin_right = 146.0
margin_bottom = 48.0
custom_constants/separation = 1

[node name="NewFileButton" type="Button" parent="HBox/Left/File"]
margin_right = 48.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
focus_mode = 0
flat = true
script = ExtResource( 13 )
normal_icon_name = "new_file"

[node name="OpenFileButton" type="Button" parent="HBox/Left/File"]
margin_left = 49.0
margin_right = 97.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
focus_mode = 0
flat = true
script = ExtResource( 13 )
normal_icon_name = "open_file"

[node name="SaveFileButton" type="Button" parent="HBox/Left/File"]
margin_left = 98.0
margin_right = 146.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
focus_mode = 0
flat = true
script = ExtResource( 13 )
normal_icon_name = "save_file"

[node name="ClearCanvasButton" type="Button" parent="HBox/Left/File"]
visible = false
margin_left = 147.0
margin_right = 195.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
focus_mode = 0
flat = true
script = ExtResource( 13 )
normal_icon_name = "clear_canvas"

[node name="VSeparator2" type="VSeparator" parent="HBox/Left"]
margin_left = 158.0
margin_right = 162.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UndoButton" type="Button" parent="HBox/Left"]
margin_left = 174.0
margin_right = 222.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
focus_mode = 0
flat = true
script = ExtResource( 13 )
normal_icon_name = "undo"

[node name="RedoButton" type="Button" parent="HBox/Left"]
margin_left = 234.0
margin_right = 282.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
focus_mode = 0
flat = true
script = ExtResource( 13 )
normal_icon_name = "redo"

[node name="VSeparator3" type="VSeparator" parent="HBox/Left"]
margin_left = 294.0
margin_right = 298.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BrushToolButton" type="Button" parent="HBox/Left"]
modulate = Color( 0.572549, 1, 0.894118, 1 )
margin_left = 310.0
margin_right = 358.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
focus_mode = 0
toggle_mode = true
pressed = true
flat = true
script = ExtResource( 13 )
normal_icon_name = "brush_tool"

[node name="LineToolButton" type="Button" parent="HBox/Left"]
margin_left = 370.0
margin_right = 418.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
focus_mode = 0
toggle_mode = true
flat = true
script = ExtResource( 13 )
normal_icon_name = "line_tool"

[node name="EraserToolButton" type="Button" parent="HBox/Left"]
margin_left = 430.0
margin_right = 478.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
focus_mode = 0
toggle_mode = true
flat = true
script = ExtResource( 13 )
normal_icon_name = "eraser_tool"

[node name="ColorPickerToolButton" type="Button" parent="HBox/Left"]
margin_left = 490.0
margin_right = 538.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
focus_mode = 0
toggle_mode = true
flat = true
script = ExtResource( 13 )
normal_icon_name = "color_picker_tool"

[node name="SelectionToolButton" type="Button" parent="HBox/Left"]
margin_left = 550.0
margin_right = 598.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
focus_mode = 0
toggle_mode = true
flat = true
script = ExtResource( 13 )
normal_icon_name = "selection_tool"

[node name="VSeparator4" type="VSeparator" parent="HBox/Left"]
margin_left = 610.0
margin_right = 614.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorButton" type="Button" parent="HBox/Left"]
margin_left = 626.0
margin_top = 6.0
margin_right = 706.0
margin_bottom = 42.0
rect_min_size = Vector2( 80, 36 )
size_flags_vertical = 4
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
script = ExtResource( 2 )
placeholder = "WWWWWWW"

[node name="BrushSizeSlider" type="HSlider" parent="HBox/Left"]
margin_left = 718.0
margin_top = 12.0
margin_right = 838.0
margin_bottom = 36.0
rect_min_size = Vector2( 120, 20 )
hint_tooltip = "TOOLBAR_TOOLTIP_BRUSH_SIZE"
size_flags_horizontal = 4
size_flags_vertical = 4
min_value = 1.0
max_value = 50.0
value = 5.0
script = ExtResource( 1 )

[node name="BrushSizeLabel" type="Label" parent="HBox/Left"]
margin_left = 850.0
margin_top = 17.0
margin_right = 870.0
margin_bottom = 31.0
text = "12"

[node name="Right" type="HBoxContainer" parent="HBox"]
margin_left = 962.0
margin_right = 1920.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 12
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundColorButton" type="Button" parent="HBox/Right"]
margin_left = 850.0
margin_right = 898.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
focus_mode = 0
flat = true
script = ExtResource( 13 )
normal_icon_name = "canvas_color_tool"

[node name="GridButton" type="Button" parent="HBox/Right"]
margin_left = 910.0
margin_right = 958.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
focus_mode = 0
toggle_mode = true
pressed = true
flat = true
script = ExtResource( 13 )
normal_icon_name = "grid_on"
pressed_icon_name = "grid_off"

[connection signal="resized" from="." to="." method="_on_Toolbar_resized"]
[connection signal="pressed" from="HBox/Left/File/NewFileButton" to="." method="_on_NewFileButton_pressed"]
[connection signal="pressed" from="HBox/Left/File/OpenFileButton" to="." method="_on_OpenFileButton_pressed"]
[connection signal="pressed" from="HBox/Left/File/SaveFileButton" to="." method="_on_SaveFileButton_pressed"]
[connection signal="pressed" from="HBox/Left/File/ClearCanvasButton" to="." method="_on_ClearCanvasButton_pressed"]
[connection signal="pressed" from="HBox/Left/UndoButton" to="." method="_on_UndoButton_pressed"]
[connection signal="pressed" from="HBox/Left/RedoButton" to="." method="_on_RedoButton_pressed"]
[connection signal="pressed" from="HBox/Left/BrushToolButton" to="." method="_on_BrushToolButton_pressed"]
[connection signal="pressed" from="HBox/Left/LineToolButton" to="." method="_on_LineToolButton_pressed"]
[connection signal="pressed" from="HBox/Left/EraserToolButton" to="." method="_on_EraserToolButton_pressed"]
[connection signal="pressed" from="HBox/Left/ColorPickerToolButton" to="." method="_on_ColorPickerToolButton_pressed"]
[connection signal="pressed" from="HBox/Left/SelectionToolButton" to="." method="_on_SelectToolButton_pressed"]
[connection signal="pressed" from="HBox/Left/ColorButton" to="." method="_on_ColorButton_pressed"]
[connection signal="value_changed" from="HBox/Left/BrushSizeSlider" to="." method="_on_BrushSizeSlider_value_changed"]
[connection signal="pressed" from="HBox/Right/BackgroundColorButton" to="." method="_on_BackgroundColorButton_pressed"]
[connection signal="toggled" from="HBox/Right/GridButton" to="." method="_on_GridButton_toggled"]
